--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="card w-25 p-3">
 					<div class="card-body">
 						<h5 class="card-title">Total</h5>
-						<p id="display-total" class="card-text user-select-all">$50</p>
+						<p id="display-total" class="card-text user-select-all"></p>
 					</div>
 				</div>
 			</div>
