red border for no inputs or non-numerical inputs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>Product's Inventory</title>
+		<title>Product Inventory</title>
 	</head>
 	<body>
 		<!-- heading display -->
@@ -82,8 +82,8 @@
 			<div class="d-flex justify-content-end">
 				<div class="card w-25 p-3">
 					<div class="card-body">
-						<h5 class="card-title">Total</h5>
-						<p id="display-total" class="card-text user-select-all"></p>
+						<h5 class="card-title">Inventory Total Cost</h5>
+						<p id="display-total" class="card-text user-select-all">$0.00</p>
 					</div>
 				</div>
 			</div>
