--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="d-flex justify-content-end">
 				<div class="card w-25 p-3">
 					<div class="card-body">
-						<h5 class="card-title">Inventory Total Cost</h5>
+						<h5 class="card-title">Inventory Budget</h5>
 						<p id="display-total" class="card-text user-select-all">$0.00</p>
 					</div>
 				</div>
