--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 				</div>
 			</div>
 		</div>
+		<footer class="footer">Copyright Shafee Ahmed 2020</footer>
 
 		<script src="app.js"></script>
 		<script
