product to products inventory

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- heading display -->
 		<div class="jumbotron jumbotron-fluid">
 			<div class="container">
-				<h1 class="display-4">Product Inventory</h1>
+				<h1 class="display-4">Products Inventory</h1>
 				<p class="lead">Enter items into our product inventory</p>
 			</div>
 		</div>
