changed input placeholders

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								id="product-name"
 								type="text"
 								class="form-control"
-								placeholder="Product name"
+								placeholder="Product"
 								aria-label="Product name"
 								aria-describedby="button-addon2"
 							/>
