accounted for items that have quantity > 1 with price 1

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								id="item-price"
 								type="text"
 								class="form-control"
-								placeholder="Price"
+								placeholder="Individual Price"
 								aria-label="Price"
 								aria-describedby="button-addon2"
 							/>
