individual price to price per item

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								id="product-name"
 								type="text"
 								class="form-control"
-								placeholder="Product"
+								placeholder="Product..."
 								aria-label="Product name"
 								aria-describedby="button-addon2"
 							/>
@@ -43,7 +43,7 @@
 								id="quantity-of-items"
 								type="text"
 								class="form-control"
-								placeholder="Quantity"
+								placeholder="Quantity..."
 								aria-label="Quantity"
 								aria-describedby="button-addon2"
 							/>
@@ -55,7 +55,7 @@
 								id="item-price"
 								type="text"
 								class="form-control"
-								placeholder="Individual Price"
+								placeholder="Price per item..."
 								aria-label="Price"
 								aria-describedby="button-addon2"
 							/>
